Solucionando fallos de configuración en Icingaweb2

--- a/roles/icingaweb2/templates/module_commandtransports.j2
+++ b/roles/icingaweb2/templates/module_commandtransports.j2
@@ -1,6 +1,6 @@
 [icinga]
 transport = "api"
-host = "localhost"
-port = "{{ db_icinga2_port }}"
+host = "{{ ansible_fqdn }}"
+port = "{{ api_port }}"
 username = "{{ icinga2_api_user }}"
 password = "{{ icinga2_api_password }}"
