Modificando todos los README y solucionando los errores con las variables de los roles

--- a/roles/apache/templates/apache2_logrotate.j2
+++ b/roles/apache/templates/apache2_logrotate.j2
@@ -1,6 +1,6 @@
 /var/log/apache2/*.log
 {
-  rotate {{ logs_rotation }}
+  rotate {{ logs_rotation_daily }}
   daily
   maxsize {{ logs_max_size }}
   missingok
