--- a/roles/fail2ban/templates/ssh_jail.j2
+++ b/roles/fail2ban/templates/ssh_jail.j2
@@ -4,6 +4,6 @@ filter = sshd
 banaction = iptables-multiport
 logpath = /var/log/auth.log
 port = {{ ssh_port }}
-bantime = {{ ssh_ban }}
-maxretry = {{ ssh_tries }}
+bantime = {{ ban_time }}
+maxretry = {{ ban_tries }}
 ignoreip = 127.0.0.1/8
