--- a/roles/icingaweb2/templates/module_commandtransports.j2
+++ b/roles/icingaweb2/templates/module_commandtransports.j2
@@ -2,5 +2,5 @@
 transport = "api"
 host = "{{ ansible_fqdn }}"
 port = "{{ api_port }}"
-username = "{{ icinga2_api_user }}"
-password = "{{ icinga2_api_password }}"
+username = "{{ api_user }}"
+password = "{{ api_password }}"
