Fixeando la autenticación de la API

--- a/roles/icinga2_master/templates/api-users.j2
+++ b/roles/icinga2_master/templates/api-users.j2
@@ -3,7 +3,7 @@
 */
 
 object ApiUser "{{ api_user }}" {
-  // password = ""
+  password = "{{ api_password }}"
   // client_cn = ""
 
   // permissions = [ "*" ]
