Aplicando varios fixes

--- a/roles/icinga2_master/templates/api-users.j2
+++ b/roles/icinga2_master/templates/api-users.j2
@@ -6,6 +6,5 @@ object ApiUser "{{ api_user }}" {
   password = "{{ api_password }}"
   // client_cn = ""
 
-  // permissions = [ "*" ]
-  permissions = [ "objects/query/Host", "objects/query/Service" ]
+  permissions = [ "*" ]
 }
